# Wolf3D-EPI-2016-2017

./: CMakeLists.txt  Makefile  draw_minimap.c  event.c  event_two.c  file  free.c  gmon.out  load_texture2.c  load_texture3.c  load_textures.c  main.c  move_foward2.c  move_mouse.c  my_getnbr.c  my_str_to_wordtab.c  my_strcat.c  ob.c  obj.c  open_window.c  print_numbers.c  raycast2.c  textures.c  utility.c  wolf.c  wolf3d
include/: wolf.h
maps/: game.wolf  map0  map1.wolf  nazi.wolf
resources/: eight.txt  five.txt  four.txt  nine.txt  one.txt  seven.txt  six.txt  three.txt  two.txt  zero.txt
src/: move_forward.c  my_draw_line.c  my_put_pixel.c  raycast.c
test/: a.out  test.c
